force-app/main/default/objects/Lead_Transfer__c/Lead_Transfer__c.object-meta.xml
<CustomObject>
    <label>Lead Transfer</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Lead Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>