force-app/main/default/objects/Lead_Transfer__c/fields/DODL__c.field-meta.xml
<CustomField>
    <fullName>DODL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DODL</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>DO/DLR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Transfers</relationshipLabel>
    <relationshipName>Lead_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>