force-app/main/default/objects/Lead_Transfer__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>DLS/DO walk-in customer</fullName>
            </value>
            <value>
                <fullName>Lead by Salesman</fullName>
            </value>
            <value>
                <fullName>PPC ads</fullName>
            </value>
            <value>
                <fullName>Paid social ads</fullName>
            </value>
            <value>
                <fullName>Direct marketing</fullName>
            </value>
            <value>
                <fullName>Lead Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>