force-app/main/default/objects/Lead_Transfer__c/validationRules/Lead_Bike_need_fill_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Bike_need_fill_Product</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  Lead_Type__c , &quot;Bike&quot;), ISBLANK(  Product__c )
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Lead_Bike_need_fill_Product</errorMessage>
</ValidationRule>